--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ app.*.map.json
 
 /android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
+
+.flutter-plugins-dependencies*
+.flutter-plugins*
+ios/Flutter/flutter_export_environment*.sh
+ios/Flutter/Generated*.xcconfig
