--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,16 +27,23 @@ dependencies:
   flutter_auth_form: ^0.0.1
   flutter_profile_manager: ^0.0.1+4
   flutter_api_services:
-    ^0.0.2
+    ^0.0.3
     # path: "../plugins/flutter_api_services"
 
+  flutter_profile_avatar: ^0.0.2+1
+
+  flutter_item_list: ^0.0.1
   flutter_profile_list:
-    ^0.0.2+1
+    ^0.0.3
     # path: "../plugins/flutter_profile_list"
 
   flutter_profile_card:
-    ^0.0.2+2
+    ^0.0.2+3
     # path: "../plugins/flutter_profile_card"
+
+  flutter_chat_components:
+    ^0.0.1+2
+    # path: "../plugins/flutter_chat"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
