Fixed some bugs and added new features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,14 @@ dependencies:
   flutter_auth_form: ^0.0.1
   flutter_profile_manager: ^0.0.1+4
   flutter_api_services:
-    ^0.0.3
+    ^0.0.3+1
     # path: "../plugins/flutter_api_services"
 
   flutter_profile_avatar: ^0.0.2+1
 
-  flutter_item_list: ^0.0.1
+  flutter_item_list:
+    ^0.0.1
+    # path: "../plugins/flutter_item_list"
   flutter_profile_list:
     ^0.0.3
     # path: "../plugins/flutter_profile_list"
@@ -44,6 +46,8 @@ dependencies:
   flutter_chat_components:
     ^0.0.1+2
     # path: "../plugins/flutter_chat"
+
+  flutter_spinkit: ^4.1.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
