--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -8,3 +8,20 @@ jobs:
   release:
     name: Build and release
     runs-on: ubuntu-20.04
+
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Setup Java
+      uses: actions/setup-java@v1
+      with:
+        java-version: "12.x"
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v1
+      with:
+        channel: stable
+
+    - name: Flutter version
+      run: flutter --version
