--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -9,19 +9,29 @@ jobs:
     name: Build and release
     runs-on: ubuntu-20.04
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Setup Java
-      uses: actions/setup-java@v1
-      with:
-        java-version: "12.x"
+      - name: Setup Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
 
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v1
-      with:
-        channel: stable
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          channel: stable
 
-    - name: Flutter version
-      run: flutter --version
+      - name: Flutter version
+        run: flutter --version
+
+      - name: Cache pub dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.FLUTTER_HOME }}/.pub-cache
+          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: ${{ runner.os }}-pub-
+
+      - name: Download pub dependencies
+        run: flutter pub get
