--- a/.github/workflows/beta.yaml
+++ b/.github/workflows/beta.yaml
@@ -38,6 +38,9 @@ jobs:
       - name: Download pub dependencies
         run: flutter pub get
 
+      - name: Generate icons
+        run: flutter pub run flutter_launcher_icons:main
+
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
