--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_auth_form: ^0.0.1
+  flutter_auth_form:
+    ^0.0.2
+    # path: "../plugins/flutter_auth_form"
   flutter_profile_manager: ^0.0.1+5
   flutter_api_services:
     ^0.0.3+1
