Updated camera plugin and updated the code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+6
+version: 1.0.1+7
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,12 +27,12 @@ dependencies:
   flutter_auth_form:
     ^0.0.2
     # path: "../plugins/flutter_auth_form"
-  flutter_profile_manager: ^0.0.1+6
+  flutter_profile_manager: ^0.0.1+7
   flutter_api_services:
     ^0.0.3+4
     # path: "../plugins/flutter_api_services"
 
-  flutter_profile_avatar: ^0.0.2+1
+  flutter_profile_avatar: 0.0.2+2
 
   flutter_item_list:
     ^0.0.2
